Mon Oct  1 12:44:03 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/util/KdTreeProcedure.java: Define OK,
	ABORT and SKIPCHILD static members as returned values for action()
	method.
	* src/org/jcae/mesh/amibe/util/KdTree.java: In constructors, bbox
	is passed via a single double array instead of two.
	* src/org/jcae/mesh/amibe/traits/MeshTraitsBuilder.java
	  src/org/jcae/mesh/amibe/traits/TriangleTraitsBuilder.java: Let all
	add* methods return current instance so that they can be chained.
	* src/org/jcae/mesh/amibe/patch/Mesh2D.java
	  src/org/jcae/mesh/amibe/traits/MeshTraitsBuilder.java: Replace
	quadtree member from Mesh2D by a builder into MeshTraitsBuilder.
	* src/org/jcae/mesh/amibe/traits/MeshTraitsBuilder.java: New
	getDefault2D() and getDefault3D() methods.  The former is used
	implicitly by Mesh2D constructor, and the latter by Mesh constructor.
	Note that getDefault3D() does not call addNodeList(), hence default
	Mesh constructor does no more contain node collection.
	* src/org/jcae/mesh/amibe/ds/ElementFactoryInterface.java: Remove
	createVertex(), createVertex(double p) and createTriangle() methods.
	* src/org/jcae/mesh/amibe/ds/Mesh.java: Let factory be a protected
	member, and add createVertex(), createTriangle() and hasAdjacency()
	methods which are delegates to factory member.

Wed Sep 26 00:27:45 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/cad/CADShapeBuilder.java
	  src/org/jcae/mesh/cad/CADShapeFactory.java
	  src-occ/org/jcae/mesh/cad/occ/OCCShapeBuilder.java
	  src-occ/org/jcae/mesh/cad/occ/OCCShapeFactory.java: Rename
	  {CAD,OCC}ShapeBuilder classes into {CAD,OCC}ShapeFactory to
	  be consistent with common design pattern names.
	* src/org/jcae/mesh/cad/CADShapeFactory.java: Let factory member
	be private, and add a getFactory() public method.

Fri Sep 21 15:13:28 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
