@@ -19,8 +19,11 @@ ant.build.javac.source=5
 test.jvmarg=-Xrunhprof:cpu=samples,depth=20
 #test.jvmarg=
 
-# Don't build tests
-# skip.tests=true
+# Build tests
+# build.tests=true
+
+# Build with viewer3d bindings
+build.extra.viewer3d=true
 
 ############################
 #version=0.1
@@ -37,6 +40,8 @@ mesherocc.jar=lib/jcae-mesherocc.jar
 mesherocc.jar.dependencies=occjava.jar
 jpda.address=8002
 
+# Main classes requiring viewer3d
+jcae.extra.viewer3d.packages=org/jcae/mesh/MeshOEMMView* org/jcae/mesh/MeshBoraViewer3d* org/jcae/mesh/MeshOEMMCoarseViewer*
+
 # test classes. They are only compiled if build.tests is set to true.
-# They require jcae-viewer3d
-test.packages=org/jcae/mesh/bora/tests/** org/jcae/mesh/amibe/util/tests/** org/jcae/mesh/amibe/patch/tests/** org/jcae/mesh/MeshOEMMView* org/jcae/mesh/MeshBoraViewer3d* org/jcae/mesh/MeshOEMMCoarseViewer*
+test.packages=org/jcae/mesh/bora/tests/** org/jcae/mesh/amibe/util/tests/** org/jcae/mesh/amibe/patch/tests/**
